
- #10472: refactor caml_sys_random_seed to ease future Multicore changes
  (Gabriel Scherer, review by Xavier Leroy)

- #10487: Move logic to get the type path from a constructor return type in
  Types
  (Nicolas Chataing, review by Jacques Garrigue)

- #10555: Do not use ghost locations for type constraints
  (Nicolás Ojeda Bär, report by Anton Bachin, review by Thomas Refis)

- #10559: Evaluate signature substitutions lazily
  (Stephen Dolan, review by Leo White)

### Build system:

### Bug fixes:

- #10473: Add CFI directives to RISC-V runtime and asmcomp.
  This allows stacktraces to work in gdb through C and OCaml calls.
  (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)

- #10461, #10498: `caml_send*` helper functions take derived pointers
  as arguments.  Those must be declared with type Addr instead of Val.
  Moreover, poll point insertion must be disabled for `caml_send*`,
  otherwise the derived pointer is live across a poll point.
  (Vincent Laviron and Xavier Leroy, review by Xavier Leroy and Sadiq Jaffer)

- #10539: Field kinds should be kept when copying types
  Losing the sharing meant that one could desynchronize them between several
  occurrences of self, allowing a method to be both public and hidden,
  which broke type soundness.
  (Jacques Garrigue, review by Leo White)

- #10542: Fix detection of immediate64 types through unboxed types.
  (Leo White, review by Stephen Dolan and Gabriel Scherer)

- #10590: Some typechecker optimisations
  (Stephen Dolan, review by Gabriel Scherer and Leo White)

- #10603, #10611: Fix if condition marked as inconstant in flambda
  (Vincent Laviron and Pierre Chambart, report by Marcello Seri)

OCaml 4.13.0
-------------

### Language features:

- #10039: Safepoints
  Add poll points to native generated code. These are effectively
  zero-sized allocations and fix some signal and remembered set
  issues. Also multicore prerequisite.
  (Sadiq Jaffer, Stephen Dolan, Damien Doligez, Xavier Leroy,